public static class AnimationConstants
{
    public static readonly string Horizontal = "Horizontal";
    public static readonly string Vertical = "Vertical";
    public static readonly string Speed = "Speed";
    public static readonly string Shoot = "Shoot";
    public static readonly string Attack = "Attack";
}